Fixed app's spacing

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,13 @@
 }
 
 .App {
+	display: flex;
 	min-height: 100vh;
 	width: 100%;
 	text-align: center;
 	align-items: center;
 	flex-direction: column;
+	justify-content: center;
 
 	background: linear-gradient(
 		-45deg,
